fix z-indexes of dev menu and save button

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .background{
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: -1;
     position:fixed;
     top:0;
     left:0;
@@ -190,6 +190,7 @@ body {
     border-radius: 3px;
     background-color: lightblue;
     font-weight: bold;
+    z-index: 6;
     margin: 5px 2px 10px;
 }
 
@@ -215,6 +216,7 @@ body {
     border-radius: 3px;
     background-color: rgba(255, 255, 255, 0.5);
     max-width: 80%;
+    z-index: 6;
 }
 
 .clockdate {
@@ -237,6 +239,7 @@ body {
     background: rgba(255, 0, 0, 0.8);
     border: 2px solid #ff0000;
     border-radius: 50%;
+    z-index: 6;
 }
 
 .add-pane {
